edited cicd to change tag in the setup file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Extract version from Git tag
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+
+      - name: Replace version placeholder in setup.py
+        run: sed -i "s/__VERSION__/$VERSION/g" setup.py
+
       - name: Upgrade pip and install dependencies
         run: |
           python -m pip install --upgrade pip
